Add webpack and update docks

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Calculadora</title>
-    <script src="scripts/ui.js" type="module"></script>
     <link rel="stylesheet" href="styles/styles.css"/>
 </head>
 <body>
@@ -57,5 +56,6 @@
         <button id="=">=</button>
     </div>
 </div>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
