Add function to set operation data

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <input id="result" readonly type="text" value="0"/>
 
     <div>
-        <button id="clear">clear</button>
+        <button class="clean" id="clear">clear</button>
     </div>
 
     <div class="row">
         <button class="operation" id="/">/</button>
         <button class="operation" id="√">√</button>
         <button class="operation" id="e">e <sup>x</sup></button>
-        <button id="⌫">⌫</button>
+        <button class="clean" id="⌫">⌫</button>
     </div>
 
     <div class="row">
