--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div style="text-align: center;">
     <input
             id="previous"
-            placeholder="previous number (for test)"
+            placeholder="previous"
             readonly
             type="text"
     />
