--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button id="+/-"><sup>+</sup>/<sub>-</sub></button>
         <button class="number" id="0">0</button>
         <button class="number" id=".">.</button>
-        <button id="=">=</button>
+        <button id="=" class="equal">=</button>
     </div>
 </div>
 <script src="dist/bundle.js"></script>
