Add new error test and fix styles

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Calculadora</title>
-    <link href="styles/mobile.css" rel="stylesheet"
-          media="all and (max-width: 1024px)">
-    <link href="styles/desktop.css" rel="stylesheet"
-          media="all and (min-width: 1025px)">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Calculadora"/>
+    <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
 <div>
