Fix number and equal error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
-<div>
+<main>
     <div class="display">
         <label for="previous"></label>
         <input
@@ -59,7 +59,12 @@
         <button class="number" id=".">.</button>
         <button id="=" class="equal">=</button>
     </div>
-</div>
+</main>
+<!--<footer>-->
+<!--    <p>Developed by <a href="">Javi</a></p>-->
+<!--    <p>& <a href="">Yago</a></p>-->
+<!--    <p>with ❤️</p>-->
+<!--</footer>-->
 <script src="dist/bundle.js"></script>
 </body>
 </html>
