Add special footer

--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
         <button id="=" class="equal">=</button>
     </div>
 </main>
-<!--<footer>-->
-<!--    <p>Developed by <a href="">Javi</a></p>-->
-<!--    <p>& <a href="">Yago</a></p>-->
-<!--    <p>with ❤️</p>-->
-<!--</footer>-->
+<footer class="footer">
+    <p>Developed by <a target="_blank" href="https://github.com/jnperezmesa">Javi</a> 🤯
+        & <a target="_blank" href="https://github.com/llagui">Yago</a> 😵 with 💤</p>
+</footer>
 <script src="dist/bundle.js"></script>
 </body>
 </html>
